Fixed an issue where MCPatcher did not apply.